kubernetes-v2/personal/applications/affine/ingress.yaml
---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: affine-http
  namespace: affine
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`affine.agrrh.com`)
      middlewares:
        - name: whitelist
          namespace: kube-system
      services:
        - kind: Service
          name: affine
          namespace: affine
          port: 80
